manifests/apps/kong-echo-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-echo-2
  namespace: kong-demo
  labels:
    app: kong-echo-2
    app.kubernetes.io/part-of: kong-community-crc-lab
spec:
  selector:
    app: kong-echo-2
  ports:
    - name: http
      port: 5678
      targetPort: http
      protocol: TCP
